--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "cakephp/cakephp": "4.4.*",
         "cakephp/migrations": "^3.2",
         "cakephp/plugin-installer": "^1.3",
-        "mobiledetect/mobiledetectlib": "^2.8"
+        "friendsofcake/bootstrap-ui": "^4.0",
+        "hubspot/api-client": "^8.3",
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "phpstan/phpstan": "^1.8"
     },
     "require-dev": {
         "cakephp/bake": "^2.6",
